<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddMedicationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
   >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/createMedication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#DBDBDB"
                android:fontFamily="serif"
                android:text="@string/create_medication"
                android:textAlignment="center"
                android:textSize="34sp" />

            <EditText
                android:id="@+id/medicationTitleInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:autofillHints="name"
                android:background="@drawable/square_borders"
                android:backgroundTint="#357872"
                android:fontFamily="serif"
                android:hint="@string/medication_title"
                android:inputType="text"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/medicationDosageInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:autofillHints=""
                android:background="@drawable/square_borders"
                android:backgroundTint="#357872"
                android:fontFamily="serif"
                android:hint="@string/medication_dosage"
                android:inputType="text"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/medicationDurationInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:autofillHints=""
                android:background="@drawable/square_borders"
                android:backgroundTint="#357872"
                android:fontFamily="serif"
                android:hint="@string/medication_duration"
                android:inputType="text"
                android:textSize="20sp" />

            <Button
                android:id="@+id/addMedicationBtn"
                android:layout_width="364dp"
                android:layout_height="61dp"
                android:layout_gravity="start"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#357872"
                android:fontFamily="serif"
                android:text="@string/done_btn"

                android:textSize="20sp" />


            <Button
                android:id="@+id/addMoreMedicationBtn"
                android:layout_width="368dp"
                android:layout_height="62dp"
                android:layout_gravity="start"
                android:backgroundTint="#3489AF"
                android:fontFamily="serif"
                android:text="@string/add_more_medication"
                android:textSize="20sp" />
        </LinearLayout>





    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>