<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".appointment.ViewAppointmentFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:paddingHorizontal="20dp"
            android:paddingVertical="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <!-- TODO: Update blank fragment layout -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="serif"
                android:paddingVertical="20dp"
                android:text="@string/viewAppointment"
                android:textAlignment="center"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/patientName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"

                android:paddingBottom="10dp"
                android:textAlignment="viewStart"
                android:textColor="#202645"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/appointmentDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:paddingBottom="10dp"

                android:textColor="#202645"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/appointmentTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:paddingBottom="10dp"

                android:textColor="#202645"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/appointmentReason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:paddingBottom="10dp"

                android:textColor="#202645"
                android:textSize="20sp" />

            <Button
                android:id="@+id/addConsultationBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#326F6B"

                android:text="@string/add_consultation"
                android:textSize="18sp" />

            <Button

                android:id="@+id/cancelAppointmentBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="#95271F"
                android:text="@string/cancelAppointment"
                android:textSize="20dp" />


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>